# 2nd_semester_HW

./: 1st_lesson_task_4_TIMER.cpp  CMakeLists.txt  test.cpp
ClassWork/: hash_equal_customer.cpp
HW_10/: CLIENT.cpp  SERVER.cpp
HW_11/: TRON_CLIENT.cpp
HW_12/: TRON_SERVER.cpp
HW_12/1st task _ JULIA/: calculator.cpp  calculator.hpp  visualizer.cpp
HW_12/3rd task _ GASE/: Functions.cpp  Functions.h  Header.hpp  Main.cpp  Molecule.cpp  Molecule.hpp  Visualizer.cpp  Visualizer.h
HW_2/: 2nd_lesson_task_1_CAPACITY.cpp  2nd_lesson_task_2_SPEED_COMPETITION.cpp  2nd_lesson_task_3_VECTOR_TO_MULTIARRAY_RAW.cpp  TIMER.h
HW_3/: 3rd_lesson_task_1_SET_AND_SORT.cpp  3rd_lesson_task_5_PHONE_DIRECTORY.cpp  main.py  randomStringGenerator.cpp  task_1_RANDOM_NUMBERS.cpp  testSetWithShuffleRelease4M.txt  testSetWithShuffleRelease5M.txt
HW_3/1st task _ SET AND SORT/: 3rd_lesson_task_1_SET_AND_SORT.cpp  main.py  task_1_RANDOM_NUMBERS_GENERATOR.cpp
HW_3/1st_task_SET_AND_SORT/: TIMER.h  main.py  testVectorWithShuffleRelease4M.txt  testVectorWithShuffleRelease5M.txt
HW_3/2nd task _ HASH FOR FLOAT/: 3rd_lesson_task_2_HASH_FOR_FLOAT.cpp  hashForDoubleV1_Collisions.txt  hashForDoubleV2_Collisions.txt  main.py
HW_3/3rd task _ NUMBER OF COLLISIONS/: 3rd_lesson_task_3_HASH_RESEARCH.cpp  main.py  numberOfCollisions.txt  numberOfCollisions_v2.txt
HW_3/4th task _ STRING HASHING/: 3rd_lesson_task_4_STRING_HASHING.cpp  CollisionsInDifferentHashFunctions.txt  main.py  task_4_STRING_HASHING_OTHER_VARIANT.cpp
HW_4/: Comparisons_in_nth_element.txt  Multitask.cpp
HW_5/: date.txt  task1_CURRENCY_CONVERTER.cpp  task2_TRANSLIT.cpp  task3_SEARCHING_EMAIL_ADDRESSES.cpp  task4_SEARCHING_DATE.cpp  text.txt  time.txt
HW_6/1st task _ DELETING COMMENTS/: DELETING_COMMENTS.cpp  DELETING_COMMENTS_V2.cpp  result.txt  test.txt
HW_6/2nd task _ STRING SEARCHING/: file_with_random_strings.txt  string_generator.cpp  task2_STRING_SEARCHING.cpp
HW_6/3rd task _ DIRECTORY CONTENTS/: 3rd_task_DIRECTORY_CONTENTS.cpp
HW_6/4th task _ JSON PEOPLE/: JSON_PEOPLE.cpp
HW_6/4th task _ JSON PEOPLE/directory/: Aleksandr Aleksandrov.txt  Artyom Artyomov.txt  Egor Egorov.txt  Ivan Ivanov.txt  Petya Petrov.txt
HW_7/: 3rd_task_PARALLEL_FOR_EACH.cpp
HW_7/1st task _ CALCULATE PI/: CALCULATE_PI.cpp
HW_7/2nd task _ PARALLEL ACCUMULATE/: PARALLEL_ACCUMULATE.cpp  main.py  results.txt  wide_variation.txt
HW_7/3rd task _ PARALLEL FOR_EACH/: PARALLEL_FOR_EACH.cpp
HW_7/4th task _ SPEED COMPETITION/: SPEED_COMPETITION.cpp  for_each test.txt  main.py  partial_sum VS inclusive_scan.txt  transform_reduce VS inner_product.txt
HW_8/: 1st_task_CALCULATE_PI_UPDATED.cpp  3rd_task_SAFETY_PRIORITY_QUEUE.cpp
HW_8/2nd task _ DNA SEARCH/: DNA_GENERATOR.cpp  DNA_SEARCH.cpp  DNA_sequence.txt
HW_8/4th task _ COMPETITION/: 4th_task_COMPETITION.cpp  results boost queue and ts (try_pop) queue 100.txt  results boost queue and ts (try_pop) queue.txt  results boost stack and ts stack 100.txt  results boost stack and ts stack.txt
HW_9/: chat.cpp  protector.cpp
Timer/: TIMER.h
